--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css">
+    <style>
+      p{ 
+        background-color: green;
+        color: aliceblue;
+      }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
