--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -6,6 +6,8 @@
       p{ 
         background-color: green;
         color: aliceblue;
+        font-size: 18px;
+
       }
     </style>
     <meta charset="UTF-8">
@@ -16,6 +18,6 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="background-color: orange;font-size: 18px">Inline Method</button>
   </body>
 </html>
